--- a/cards.html
+++ b/cards.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>13 карт игра</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!DOCTYPE html>
@@ -161,7 +161,7 @@
             />
           </div>
         </section>
-        <script src="memory.js"></script>
+        <script src="js/memory.js"></script>
       </body>
     </html>
   </body>
